services.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python-app
  ports:
  - port: 8000
    targetPort: 5000
  type: NodePort
