ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  labels:
    app.kubernetes.io/name: python-app
spec:
  rules:
  - host: 192.168.49.2.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port: 
              number: 8000
